--- a/kitchen.yml
+++ b/kitchen.yml
@@ -30,6 +30,18 @@ verifier:
   reporter: documentation
 
 platforms:
+  - name: rhel75
+      username: ec2-user
+      ssh_key: ~/.ssh/id_rsa
+    driver:
+      image_id: ami-28e07e50
+      #      image_search:
+      #  owner-id: "309956199498"
+      #  name: "RHEL-7.5_HVM_GA-20180322-x86_64-1-Hourly2-GP2"
+    driver_config:
+      user_data: ./kitchen_user_data
+
+
   - name: centos-6
     transport:
       username: centos
