--- a/kitchen.yml
+++ b/kitchen.yml
@@ -9,7 +9,7 @@ driver:
   instance_type: t2.micro
   tags:
     # Replace YOURNAME here
-    Name: "<yourname>-node"
+    Name: "tio-node"
     X-Contact: "tbagio"
     X-Application: "apac"
     X-Dept: "sales"
@@ -38,39 +38,9 @@ platforms:
     driver_config:
       user_data: ./kitchen_user_data
 
-  - name: oracle76
-    transport:
-      username: ec2-user
-      ssh_key: ~/.ssh/id_rsa
-    driver:
-      image_id: ami-064a66c638569c37c
-      #owner-id: "131827586825"
-    driver_config:
-      user_data: ./kitchen_user_data
-
-  - name: centos-6
-    transport:
-      username: centos
-      ssh_key: ~/.ssh/bagio-training.pem
-    driver_config:
-      user_data: ./kitchen_user_data
 
 suites:
   - name: ws1
-    run_list:
-      - recipe[cookbook::default]
-    verifier:
-      inspec_tests:
-        - test/integration/default
-    attributes:
-  - name: ws2
-    run_list:
-      - recipe[cookbook::default]
-    verifier:
-      inspec_tests:
-        - test/integration/default
-    attributes:
-  - name: ws3
     run_list:
       - recipe[cookbook::default]
     verifier:
